name:               snap-stream
version:            0.1
synopsis:           Streaming Snap handlers
description:        Snap handlers for streaming access with range requests
license:            BSD3
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
stability:          Experimental
category:           Web
build-type:         Simple
cabal-version:      >=1.6
extra-source-files:
  changelog.md
  readme.md

library
  hs-source-dirs:  src
  build-depends:
      attoparsec  >=0.13 && <0.14
    , base        >=4.9  && <4.15
    , bytestring  >=0.10 && <0.11
    , io-streams  >=1.4  && <1.6
    , snap-core   >=1.0  && <1.1

  exposed-modules: Snap.Util.FileServe.Stream
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields
    -O2
